add psd.dll plugin

--- a/cpp/plugins/psdfile/CMakeLists.txt
+++ b/cpp/plugins/psdfile/CMakeLists.txt
@@ -4,11 +4,11 @@ project(psdfile LANGUAGES CXX)
 add_subdirectory(psdparse)
 
 add_library(${PROJECT_NAME} STATIC
+	main.cpp
 	psdclass.cpp
 	psdclass_loadmem.cpp
 	psdclass_loadstream.cpp
 	psdclass_loadstreambase.cpp
-	main.cpp
 )
 
-target_link_libraries(${PROJECT_NAME} PRIVATE krkr2plugin psdparse)
+target_link_libraries(${PROJECT_NAME} PUBLIC psdparse)
