add libgdiplus library vcpkg port, add layerExDraw plugin(incomplete)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,7 @@ set(ENV{ANDROID_NDK_HOME} "$ENV{ANDROID_NDK}")
 include(cmake/vcpkg_android.cmake)
 project(krkr2)
 
+set(CMAKE_C_STANDARD 17)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 
