--- a/gradle.properties
+++ b/gradle.properties
@@ -17,7 +17,7 @@
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 
-# Android SDK version that will be used as the compile project
+# Android SDK version that will be used as the compile
 PROP_COMPILE_SDK_VERSION=34
 
 # Android SDK version that will be used as the earliest version of android this application can run on
