--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -15,7 +15,7 @@ android {
         ndk {
             jobs Runtime.runtime.availableProcessors()
             //noinspection ChromeOsAbiSupport
-            abiFilters 'arm64-v8a', 'armeabi-v7a'
+            abiFilters 'arm64-v8a' //, 'armeabi-v7a'
         }
 
         externalNativeBuild {
@@ -86,7 +86,7 @@ android {
             enable = true           // 启用 ABI 分包
             reset()               // 清除默认支持的 ABI
             //noinspection ChromeOsAbiSupport
-            include 'armeabi-v7a', 'arm64-v8a' //, 'x86', 'x86_64' // 指定支持的 ABI
+            include 'arm64-v8a' // 'armeabi-v7a', 'x86', 'x86_64' // 指定支持的 ABI
             universalApk = true
         }
     }
