--- a/cpp/plugins/psdfile/CMakeLists.txt
+++ b/cpp/plugins/psdfile/CMakeLists.txt
@@ -4,11 +4,15 @@ project(psdfile)
 add_subdirectory(psdparse)
 
 add_library(${PROJECT_NAME} STATIC
-	main.cpp
-	psdclass.cpp
-	psdclass_loadmem.cpp
-	psdclass_loadstream.cpp
-	psdclass_loadstreambase.cpp
+    psdclass_loadmem.cpp
+    psdclass_loadstream.cpp
+    psdclass_loadstreambase.cpp
+)
+
+target_sources(${PROJECT_NAME} PUBLIC
+    main.cpp
+    psdclass.cpp
+    psdclass.h
 )
 
 target_link_libraries(${PROJECT_NAME} PRIVATE krkr2plugin psdparse)
