--- a/cpp/plugins/psdfile/psdparse/CMakeLists.txt
+++ b/cpp/plugins/psdfile/psdparse/CMakeLists.txt
@@ -19,4 +19,4 @@ target_include_directories(${PROJECT_NAME} PRIVATE
 	${Boost_INCLUDE_DIRS}
 )
 
-target_link_libraries(${PROJECT_NAME} PUBLIC krkr2plugin ${Boost_LIBRARIES})
+target_link_libraries(${PROJECT_NAME} PRIVATE krkr2plugin ${Boost_LIBRARIES})
