--- a/android/app/AndroidManifest.xml
+++ b/android/app/AndroidManifest.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!-- Replace org.libsdl.app with the identifier of your game below, e.g.
+<?xml version="1.0" encoding="utf-8"?><!-- Replace org.libsdl.app with the identifier of your game below, e.g.
      com.gamemaker.game
 -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
@@ -12,15 +11,19 @@
         android:glEsVersion="0x00020000"
         android:required="true" />
 
-    <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE" tools:ignore="ScopedStorage"/>
+    <uses-permission
+        android:name="android.permission.MANAGE_EXTERNAL_STORAGE"
+        tools:ignore="ScopedStorage" />
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:requestLegacyExternalStorage="true"
-        android:installLocation="auto"
+        android:name=".KR2Application"
         android:allowBackup="true"
+        android:extractNativeLibs="true"
         android:icon="@mipmap/ic_launcher"
+        android:installLocation="auto"
         android:label="@string/app_name"
+        android:requestLegacyExternalStorage="true"
         android:resizeableActivity="true">
         <meta-data
             android:name="android.app.lib_name"
@@ -30,7 +33,7 @@
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:exported="true"
             android:screenOrientation="landscape"
-            android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
+            android:theme="@style/Theme.KR2"
             android:windowSoftInputMode="adjustPan"
             tools:ignore="DiscouragedApi">
             <intent-filter>
