--- a/android/libcocos2dx/build.gradle
+++ b/android/libcocos2dx/build.gradle
@@ -34,4 +34,6 @@ android {
 
 dependencies {
     implementation fileTree(dir: './java/libs', include: ['*.jar'])
+    implementation 'androidx.activity:activity:1.9.3'
+    implementation 'androidx.appcompat:appcompat:1.7.0'
 }
