--- a/cpp/core/CMakeLists.txt
+++ b/cpp/core/CMakeLists.txt
@@ -62,6 +62,16 @@ set(PLATFORM android)
 # Create the static library
 add_library(${PROJECT_NAME} STATIC ${KRKR2CORE_SOURCES})
 
+# 启用 OpenMP 支持
+find_package(OpenMP REQUIRED)
+
+if(OPENMP_FOUND)
+    target_link_libraries(${PROJECT_NAME} PRIVATE OpenMP::OpenMP_CXX)
+    target_compile_options(${PROJECT_NAME} PRIVATE ${OpenMP_CXX_FLAGS})
+else()
+    message(WARNING "OpenMP not found, fallback to single-threading.")
+endif()
+
 android_ndk_import_module_cpufeatures()
 
 target_link_libraries(${PROJECT_NAME} PUBLIC
