fix bullet lib path

--- a/vcpkg/ports/cocos2dx/cocos2dx-config.cmake.in
+++ b/vcpkg/ports/cocos2dx/cocos2dx-config.cmake.in
@@ -47,8 +47,8 @@ if(@BUILD_EXT_BULLET@)
 
     if(WINDOWS)
       set_target_properties(ext_bullet PROPERTIES
-        IMPORTED_LOCATION_DEBUG "${CMAKE_CURRENT_LIST_DIR}/chipmunk/prebuilt/${platform_spec_path}/debug/libbullet.lib"
-        IMPORTED_LOCATION_RELEASE "${CMAKE_CURRENT_LIST_DIR}/chipmunk/prebuilt/${platform_spec_path}/release/libbullet.lib"
+        IMPORTED_LOCATION_DEBUG "${CMAKE_CURRENT_LIST_DIR}/bullet/prebuilt/${platform_spec_path}/debug/libbullet.lib"
+        IMPORTED_LOCATION_RELEASE "${CMAKE_CURRENT_LIST_DIR}/bullet/prebuilt/${platform_spec_path}/release/libbullet.lib"
       )
       set_target_properties(ext_bullet PROPERTIES
         MAP_IMPORTED_CONFIG_MINSIZEREL Release
@@ -56,29 +56,29 @@ if(@BUILD_EXT_BULLET@)
       )
     else()
       set_target_properties(ext_bullet PROPERTIES
-        IMPORTED_LOCATION "${CMAKE_CURRENT_LIST_DIR}/chipmunk/prebuilt/${platform_spec_path}/libLinearMath.a"
+        IMPORTED_LOCATION "${CMAKE_CURRENT_LIST_DIR}/bullet/prebuilt/${platform_spec_path}/libLinearMath.a"
       )
 
       # multi libs
       add_library(bulletcollision STATIC IMPORTED)
       set_target_properties(bulletcollision PROPERTIES
-        IMPORTED_LOCATION "${CMAKE_CURRENT_LIST_DIR}/chipmunk/prebuilt/${platform_spec_path}/libBulletCollision.a"
+        IMPORTED_LOCATION "${CMAKE_CURRENT_LIST_DIR}/bullet/prebuilt/${platform_spec_path}/libBulletCollision.a"
       )
       add_library(bulletdynamics STATIC IMPORTED)
       set_target_properties(bulletdynamics PROPERTIES
-        IMPORTED_LOCATION "${CMAKE_CURRENT_LIST_DIR}/chipmunk/prebuilt/${platform_spec_path}/libBulletDynamics.a"
+        IMPORTED_LOCATION "${CMAKE_CURRENT_LIST_DIR}/bullet/prebuilt/${platform_spec_path}/libBulletDynamics.a"
       )
       add_library(bulletmultithreaded STATIC IMPORTED)
       set_target_properties(bulletmultithreaded PROPERTIES
-        IMPORTED_LOCATION "${CMAKE_CURRENT_LIST_DIR}/chipmunk/prebuilt/${platform_spec_path}/libBulletMultiThreaded.a"
+        IMPORTED_LOCATION "${CMAKE_CURRENT_LIST_DIR}/bullet/prebuilt/${platform_spec_path}/libBulletMultiThreaded.a"
       )
       add_library(minicl STATIC IMPORTED)
       set_target_properties(minicl PROPERTIES
-        IMPORTED_LOCATION "${CMAKE_CURRENT_LIST_DIR}/chipmunk/prebuilt/${platform_spec_path}/libMiniCL.a"
+        IMPORTED_LOCATION "${CMAKE_CURRENT_LIST_DIR}/bullet/prebuilt/${platform_spec_path}/libMiniCL.a"
       )
       add_library(linearmath STATIC IMPORTED)
       set_target_properties(linearmath PROPERTIES
-        IMPORTED_LOCATION "${CMAKE_CURRENT_LIST_DIR}/chipmunk/prebuilt/${platform_spec_path}/libLinearMath.a"
+        IMPORTED_LOCATION "${CMAKE_CURRENT_LIST_DIR}/bullet/prebuilt/${platform_spec_path}/libLinearMath.a"
       )
 
       # internal link depend
