--- a/cpp/plugins/psdfile/psdparse/CMakeLists.txt
+++ b/cpp/plugins/psdfile/psdparse/CMakeLists.txt
@@ -1,7 +1,6 @@
 cmake_minimum_required(VERSION 3.19)
-project(psdparse)
 
-project(${PROJECT_NAME})
+project(psdparse)
 
 add_library(${PROJECT_NAME} STATIC
 	bmp.cpp
@@ -13,7 +12,7 @@ add_library(${PROJECT_NAME} STATIC
 	psdresource.cpp
 )
 
-find_package(Boost COMPONENTS phoenix spirit iostreams REQUIRED)
+find_package(Boost COMPONENTS phoenix spirit iostreams REQUIRED NO_MODULE)
 
 target_link_libraries(${PROJECT_NAME} PRIVATE
 	krkr2plugin Boost::phoenix Boost::spirit Boost::iostreams
