--- a/vcpkg/ports/cocos2dx/patch/cocos2d-x/external/CMakeLists.txt
+++ b/vcpkg/ports/cocos2dx/patch/cocos2d-x/external/CMakeLists.txt
@@ -101,16 +101,14 @@ if (BUILD_LUA_LIBS)
     )
 endif ()
 
-if (NOT LINUX)
-    if (BUILD_EXT_CURL)
-        add_subdirectory(curl)
-        target_link_libraries(external PUBLIC ext_curl)
-    endif (BUILD_EXT_CURL)
+if (BUILD_EXT_CURL)
+    find_package(CURL REQUIRED)
+    target_link_libraries(external PUBLIC CURL::libcurl)
+endif (BUILD_EXT_CURL)
 
-    find_package(PNG REQUIRED)
-    target_link_libraries(external PUBLIC PNG::PNG)
+find_package(PNG REQUIRED)
+target_link_libraries(external PUBLIC PNG::PNG)
 
-endif (NOT LINUX)
 
 if (LINUX)
     add_subdirectory(linux-specific/fmod)
@@ -149,13 +147,11 @@ if (WINDOWS OR MACOSX OR LINUX)
     target_link_libraries(external PUBLIC ext_glfw3)
 endif ()
 
-if (MACOSX OR ANDROID OR WINDOWS)
-    if (BUILD_EXT_ZLIB)
-        find_package(ZLIB REQUIRED)
-        target_link_libraries(external PUBLIC ZLIB::ZLIB)
-        add_library(ext_zlib ALIAS ZLIB::ZLIB)
-    endif (BUILD_EXT_ZLIB)
-endif ()
+if (BUILD_EXT_ZLIB)
+    find_package(ZLIB REQUIRED)
+    target_link_libraries(external PUBLIC ZLIB::ZLIB)
+    add_library(ext_zlib ALIAS ZLIB::ZLIB)
+endif (BUILD_EXT_ZLIB)
 
 # unzip depend on zlib
 if (BUILD_EXT_UNZIP)
