--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,22 @@
 cmake_minimum_required(VERSION 3.28)
 
-set(VCPKG_TARGET_ANDROID ON)
+if(ANDROID)
+    set(VCPKG_TARGET_ANDROID ON)
+    set(ENV{ANDROID_NDK_HOME} "$ENV{ANDROID_NDK}")
+    include(cmake/vcpkg_android.cmake)
+else()
+    set(CMAKE_TOOLCHAIN_FILE $ENV{VCPKG_ROOT}/scripts/buildsystems/vcpkg.cmake)
+endif()
 
-set(ENV{ANDROID_NDK_HOME} "$ENV{ANDROID_NDK}")
+set(APP_NAME krkr2)
 
-include(cmake/vcpkg_android.cmake)
-project(krkr2)
+project(${APP_NAME})
+
+set(VCPKG_INSTALL_DIR "${CMAKE_BINARY_DIR}/vcpkg_installed/${VCPKG_TARGET_TRIPLET}")
+
+if(NOT ANDROID)
+    set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
+endif()
 
 set(CMAKE_C_STANDARD 17)
 set(CMAKE_CXX_STANDARD 17)
@@ -14,7 +25,11 @@ set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 set(KRKR2CORE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cpp/core)
 set(KRKR2PLUGIN_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cpp/plugins)
 
-add_library(${PROJECT_NAME} SHARED ${CMAKE_CURRENT_SOURCE_DIR}/cpp/krkr2_android.cpp)
+if(ANDROID)
+    add_library(${PROJECT_NAME} SHARED ${CMAKE_CURRENT_SOURCE_DIR}/android/cpp/krkr2_android.cpp)
+elseif(LINUX)
+    add_executable(${PROJECT_NAME} ${CMAKE_CURRENT_SOURCE_DIR}/linux/main.cpp)
+endif()
 
 target_include_directories(${PROJECT_NAME} PUBLIC ${KRKR2CORE_PATH}/environ/cocos2d)
 
@@ -25,3 +40,25 @@ add_subdirectory(${KRKR2PLUGIN_PATH})
 target_link_libraries(${PROJECT_NAME} PUBLIC
     krkr2plugin krkr2core
 )
+
+if(NOT ANDROID)
+    include("${CMAKE_CURRENT_SOURCE_DIR}/cmake/CocosBuildHelpers.cmake")
+
+    set(GAME_RES_FOLDER "${CMAKE_CURRENT_SOURCE_DIR}/ui/cocos-studio")
+
+    if(WINDOWS)
+        cocos_mark_multi_resources(common_res_files RES_TO "Resources" FOLDERS ${GAME_RES_FOLDER})
+    endif()
+
+    # mark app resources
+    setup_cocos_app_config(${APP_NAME})
+
+    if(WINDOWS)
+        cocos_copy_target_dll(${APP_NAME})
+    endif()
+
+    if(LINUX OR WINDOWS)
+        cocos_get_resource_path(APP_RES_DIR ${APP_NAME})
+        cocos_copy_target_res(${APP_NAME} LINK_TO ${APP_RES_DIR} FOLDERS ${GAME_RES_FOLDER})
+    endif()
+endif()
