--- a/cpp/plugins/layerex_draw/CMakeLists.txt
+++ b/cpp/plugins/layerex_draw/CMakeLists.txt
@@ -9,11 +9,8 @@ target_sources(${PROJECT_NAME} PUBLIC
     DrawPath.cpp
 )
 
-find_package(Libgdiplus REQUIRED)
-target_include_directories(${PROJECT_NAME} PRIVATE ${Libgdiplus_INCLUDE_DIRS})
-target_link_libraries(${PROJECT_NAME} PRIVATE krkr2plugin ${Libgdiplus_LIBRARIES})
-
-set(VCPKG_INSTALL_DIR ${CMAKE_BINARY_DIR}/vcpkg_installed/${VCPKG_TARGET_TRIPLET})
+find_package(libgdiplus CONFIG REQUIRED)
+target_link_libraries(${PROJECT_NAME} PRIVATE krkr2plugin libgdiplus::libgdiplus)
 
 # glibconfig
 # https://invent.kde.org/frameworks/extra-cmake-modules/-/blob/master/find-modules/FindGLIB2.cmake
