--- a/vcpkg/ports/cocos2dx/cocos2dx-config.cmake.in
+++ b/vcpkg/ports/cocos2dx/cocos2dx-config.cmake.in
@@ -39,15 +39,11 @@ if(@BUILD_EXT_WEBP@)
     find_package(WebP CONFIG REQUIRED)
 endif()
 
-if(NOT "@LINUX@")
-    find_package(PNG REQUIRED)
-endif()
+find_package(PNG REQUIRED)
 
-if("@MACOSX@" OR "@ANDROID@" OR "@WINDOWS@")
-    if(@BUILD_EXT_ZLIB@)
-        find_package(ZLIB REQUIRED)
-        add_library(ext_zlib ALIAS ZLIB::ZLIB)
-    endif()
+if(@BUILD_EXT_ZLIB@)
+    find_package(ZLIB REQUIRED)
+    add_library(ext_zlib ALIAS ZLIB::ZLIB)
 endif()
 
 if(@BUILD_EXT_BOX2D@)
@@ -218,25 +214,46 @@ if(@BUILD_EXT_WEBSOCKETS@)
 endif()
 
 if(@BUILD_EXT_CURL@)
-    if(@WINDOWS@)
-      add_library(ext_curl SHARED IMPORTED)
-    else()
-      add_library(ext_curl STATIC IMPORTED)
-    endif()
+    find_package(CURL REQUIRED)
+endif()
 
-    set_target_properties(ext_curl PROPERTIES
-      INTERFACE_INCLUDE_DIRECTORIES "${CMAKE_CURRENT_LIST_DIR}/curl/include/${platform_name}"
+if(@LINUX@)
+    add_library(ext_fmod SHARED IMPORTED)
+
+    set_target_properties(ext_fmod PROPERTIES
+        INTERFACE_INCLUDE_DIRECTORIES "${CMAKE_CURRENT_LIST_DIR}/linux-specific/fmod/include"
+        IMPORTED_LOCATION "${CMAKE_CURRENT_LIST_DIR}/linux-specific/fmod/prebuilt/64-bit/libfmod.so"
     )
 
-    if(@WINDOWS@)
-      set_target_properties(ext_curl PROPERTIES
-        IMPORTED_LOCATION "${CMAKE_CURRENT_LIST_DIR}/curl/prebuilt/${platform_spec_path}/libcurl.dll"
-        IMPORTED_IMPLIB "${CMAKE_CURRENT_LIST_DIR}/curl/prebuilt/${platform_spec_path}/libcurl.lib"
-      )
+    find_package(Fontconfig REQUIRED)
+
+    find_package(PkgConfig REQUIRED)
+    pkg_check_modules(GTK3 REQUIRED gtk+-3.0)
+
+    find_package(GLEW REQUIRED)
+    find_package(OpenGL REQUIRED)
+    find_package(unofficial-sqlite3 CONFIG REQUIRED)
+endif()
+
+if("@WINDOWS@" OR "@MACOSX@" OR "@LINUX@")
+    
+    add_library(ext_glfw3 STATIC IMPORTED)
+
+    set_target_properties(ext_glfw3 PROPERTIES
+        INTERFACE_INCLUDE_DIRECTORIES "${CMAKE_CURRENT_LIST_DIR}/glfw3/include/${platform_name}"
+    )
+    if(@LINUX@)
+        set_target_properties(ext_glfw3 PROPERTIES
+            IMPORTED_LOCATION "${CMAKE_CURRENT_LIST_DIR}/glfw3/prebuilt/linux/libglfw3.a"
+        )
+    elseif(@WINDOWS@)
+        set_target_properties(ext_glfw3 PROPERTIES
+            IMPORTED_LOCATION "${CMAKE_CURRENT_LIST_DIR}/glfw3/prebuilt/${platform_spec_path}/glfw3.lib"
+        )
     else()
-      set_target_properties(ext_curl PROPERTIES
-        IMPORTED_LOCATION "${CMAKE_CURRENT_LIST_DIR}/curl/prebuilt/${platform_spec_path}/libcurl.a"
-      )
+        set_target_properties(ext_glfw3 PROPERTIES
+            IMPORTED_LOCATION "${CMAKE_CURRENT_LIST_DIR}/glfw3/prebuilt/${platform_spec_path}/libglfw3.a"
+        )
     endif()
 endif()
 
