--- a/cpp/plugins/layerex_draw/CMakeLists.txt
+++ b/cpp/plugins/layerex_draw/CMakeLists.txt
@@ -12,6 +12,8 @@ target_sources(${PROJECT_NAME} PUBLIC
 find_package(libgdiplus CONFIG REQUIRED)
 target_link_libraries(${PROJECT_NAME} PRIVATE krkr2plugin libgdiplus::libgdiplus)
 
+set(VCPKG_INSTALL_DIR "${CMAKE_BINARY_DIR}/vcpkg_installed/${VCPKG_TARGET_TRIPLET}")
+
 # glibconfig
 # https://invent.kde.org/frameworks/extra-cmake-modules/-/blob/master/find-modules/FindGLIB2.cmake
 target_include_directories(${PROJECT_NAME} PUBLIC "${VCPKG_INSTALL_DIR}/lib/glib-2.0/include")
